--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: android
+sudo: required
 android:
   components:
-    # The BuildTools version used by your project
-    - build-tools-26.0.2
+    - tools
+    - platform-tools
+    - tools
 
-    # The SDK version used to compile your project
+    - build-tools-26.0.2
     - android-26
