--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,8 @@
 language: android
 sudo: required
+before_install:
+  - chmod +x gradlew
 android:
   components:
-    - tools
-    - platform-tools
-    - tools
-
     - build-tools-26.0.2
     - android-26
