Remove 'test' task from Travis script ('build' runs it).

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
   # The properties file containing the Reddit client ID is gitignored and must be created on the build box.
   - sudo echo "CLIENT_ID=1234567890" > /home/travis/build/scb5304/not-reddit/client.properties
 script:
-  - ./gradlew clean build test --stacktrace
+  - ./gradlew clean build --stacktrace
