--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.0"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+    // https://stackoverflow.com/questions/44922761/warning-warning-supported-source-version-release-7-from-annotation-processor
+    annotationProcessor "android.arch.lifecycle:common-java8:1.1.0"
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
@@ -88,6 +90,10 @@ dependencies {
     // Room
     implementation "android.arch.persistence.room:runtime:1.0.0"
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+
+    // Using Java8's time library without requiring AI 26
+    // https://github.com/JakeWharton/ThreeTenABP
+    compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
 
     // Paging
     implementation "android.arch.paging:runtime:1.0.0-alpha5"
