--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,20 +42,17 @@ android {
 
 // https://developer.android.com/topic/libraries/architecture/adding-components.html
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    compile 'com.android.support:design:26.1.0'
-    compile 'com.android.support:cardview-v7:26.1.0'
-    testCompile 'junit:junit:4.12'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 
     //Stetho
-    compile 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
 
     //ButterKnife
-    compile 'com.jakewharton:butterknife:8.8.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
     //OkHttp
@@ -93,14 +90,17 @@ dependencies {
 
     // Using Java8's time library without requiring AI 26
     // https://github.com/JakeWharton/ThreeTenABP
-    compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
 
     // Paging
     implementation "android.arch.paging:runtime:1.0.0-alpha5"
 
-    // Test helpers for LiveData
+    testImplementation 'junit:junit:4.12'
     testImplementation "android.arch.core:core-testing:1.1.0"
-
-    // Test helpers for Room
     testImplementation "android.arch.persistence.room:testing:1.0.0"
+    testImplementation "org.mockito:mockito-core:2.15.0"
+    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+        exclude group: 'com.android.support', module: 'support-annotations'
+    })
+
 }
