Never mind, FragmentPagerAdapters are the root of all evil.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
             abortOnError false
         }
 
+        dataBinding {
+            enabled = true
+        }
+
         buildConfigField "String", "CLIENT_ID", "\"" + clientProperties['CLIENT_ID'] + "\""
     }
     buildTypes {
