--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:gridlayout-v7:26.1.0'
 
+    // FAB
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
+
     //Stetho
     implementation 'com.facebook.stetho:stetho:1.5.0'
 
@@ -101,9 +104,6 @@ dependencies {
 
     // Paging
     implementation "android.arch.paging:runtime:1.0.0-alpha5"
-
-    implementation 'uk.co.markormesher:android-fab:2.2.0'
-
 
     testImplementation 'junit:junit:4.12'
     testImplementation "android.arch.core:core-testing:1.1.0"
