--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,6 @@ android {
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         javaCompileOptions {
@@ -47,7 +46,6 @@ android {
 
 // https://developer.android.com/topic/libraries/architecture/adding-components.html
 dependencies {
-    implementation 'com.android.support:multidex:1.0.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
@@ -68,6 +66,9 @@ dependencies {
     //OkHttp
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+
+    //Picasso
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.0"
@@ -109,7 +110,7 @@ dependencies {
     testImplementation "android.arch.core:core-testing:1.1.0"
     testImplementation "android.arch.persistence.room:testing:1.0.0"
     testImplementation "org.mockito:mockito-core:2.15.0"
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
