--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:support-v4:26.1.0'
+        resolutionStrategy.force 'com.android.support:support-v7:26.1.0'
+        resolutionStrategy.force 'com.android.support:appcompat-v7:26.1.0'
+        resolutionStrategy.force 'com.android.support:customtabs:26.1.0'
+    }
 }
 
 // https://developer.android.com/topic/libraries/architecture/adding-components.html
@@ -66,6 +73,9 @@ dependencies {
 
     //HTML TextView
     implementation 'org.sufficientlysecure:html-textview:3.5'
+
+    //Android CustomTabs (helper library that wraps Chrome CustomTabs)
+    implementation 'saschpe.android:customtabs:1.1.1'
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.0"
