--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ android {
         resolutionStrategy.force 'com.android.support:appcompat-v7:26.1.0'
         resolutionStrategy.force 'com.android.support:customtabs:26.1.0'
     }
+
+    lintOptions {
+        disable 'CheckResult'
+    }
 }
 
 // https://developer.android.com/topic/libraries/architecture/adding-components.html
