Use WebView instead of custom tab so we can remove cookies and get fresh logins for adding new accounts.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="notreddit" />
+                <data android:scheme="@string/oauth_scheme" />
             </intent-filter>
         </activity>
 
