--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ def clientProperties = new Properties()
 clientProperties.load(new FileInputStream(clientPropsFile))
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 'android-P'
     defaultConfig {
         applicationId "com.jollyremedy.notreddit"
         minSdkVersion 23
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -39,10 +39,10 @@ android {
     }
 
     configurations.all {
-        resolutionStrategy.force 'com.android.support:support-v4:26.1.0'
-        resolutionStrategy.force 'com.android.support:support-v7:26.1.0'
-        resolutionStrategy.force 'com.android.support:appcompat-v7:26.1.0'
-        resolutionStrategy.force 'com.android.support:customtabs:26.1.0'
+        resolutionStrategy.force 'com.android.support:support-v4:28.0.0-alpha1'
+        resolutionStrategy.force 'com.android.support:support-v7:28.0.0-alpha1'
+        resolutionStrategy.force 'com.android.support:appcompat-v7:28.0.0-alpha1'
+        resolutionStrategy.force 'com.android.support:customtabs:28.0.0-alpha1'
     }
 
     lintOptions {
@@ -51,16 +51,15 @@ android {
 }
 
 // https://developer.android.com/topic/libraries/architecture/adding-components.html
+// https://developer.android.com/preview/setup-sdk
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:gridlayout-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
+    implementation 'com.android.support:design:28.0.0-alpha1'
+    implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
+    implementation 'com.android.support:gridlayout-v7:28.0.0-alpha1'
 
-    // FAB
-    implementation 'com.getbase:floatingactionbutton:1.10.1'
 
     //Stetho
     implementation 'com.facebook.stetho:stetho:1.5.0'
@@ -86,10 +85,10 @@ dependencies {
     implementation 'saschpe.android:customtabs:1.1.1'
 
     // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:1.1.0"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
     // https://stackoverflow.com/questions/44922761/warning-warning-supported-source-version-release-7-from-annotation-processor
-    annotationProcessor "android.arch.lifecycle:common-java8:1.1.0"
+    annotationProcessor "android.arch.lifecycle:common-java8:1.1.1"
 
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
@@ -110,20 +109,12 @@ dependencies {
     //Google Guava
     implementation 'com.google.guava:guava:24.0-android'
 
-    // Room
-    implementation "android.arch.persistence.room:runtime:1.0.0"
-    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
-
     // Using Java8's time library without requiring API 26
     // https://github.com/JakeWharton/ThreeTenABP
     implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
 
-    // Paging
-    implementation "android.arch.paging:runtime:1.0.0-alpha5"
-
     testImplementation 'junit:junit:4.12'
-    testImplementation "android.arch.core:core-testing:1.1.0"
-    testImplementation "android.arch.persistence.room:testing:1.0.0"
+    testImplementation "android.arch.core:core-testing:1.1.1"
     testImplementation "org.mockito:mockito-core:2.15.0"
     androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
