--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ android:
   components:
   # https://docs.travis-ci.com/user/languages/android/
     - build-tools-27.0.3
-    - android-26
+    - android-27
 before_install:
   # To prevent gradlew permission denied: https://stackoverflow.com/a/33820642
   - chmod +x gradlew
+  - yes | sdkmanager "platforms;android-27"
 
   # The properties file containing the Reddit client ID is gitignored and must be created on the build box.
   - sudo echo "CLIENT_ID=1234567890" >> /home/travis/build/scb5304/not-reddit/client.properties
