--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ def clientProperties = new Properties()
 clientProperties.load(new FileInputStream(clientPropsFile))
 
 android {
-    compileSdkVersion 'android-P'
+    compileSdkVersion 27
     defaultConfig {
         applicationId "com.jollyremedy.notreddit"
         minSdkVersion 23
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -39,10 +39,10 @@ android {
     }
 
     configurations.all {
-        resolutionStrategy.force 'com.android.support:support-v4:28.0.0-alpha1'
-        resolutionStrategy.force 'com.android.support:support-v7:28.0.0-alpha1'
-        resolutionStrategy.force 'com.android.support:appcompat-v7:28.0.0-alpha1'
-        resolutionStrategy.force 'com.android.support:customtabs:28.0.0-alpha1'
+        resolutionStrategy.force 'com.android.support:support-v4:27.1.1'
+        resolutionStrategy.force 'com.android.support:support-v7:27.1.1'
+        resolutionStrategy.force 'com.android.support:appcompat-v7:27.1.1'
+        resolutionStrategy.force 'com.android.support:customtabs:27.1.1'
     }
 
     lintOptions {
@@ -55,11 +55,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha1'
-    implementation 'com.android.support:design:28.0.0-alpha1'
-    implementation 'com.android.support:cardview-v7:28.0.0-alpha1'
-    implementation 'com.android.support:gridlayout-v7:28.0.0-alpha1'
-
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.android.support:gridlayout-v7:27.1.1'
 
     //Stetho
     implementation 'com.facebook.stetho:stetho:1.5.0'
