--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:gridlayout-v7:27.1.1'
 
+    //Timber
+    implementation 'com.jakewharton.timber:timber:4.7.0'
+
     //Stetho
     implementation 'com.facebook.stetho:stetho:1.5.0'
 
