Begin modernization effort - it compiles

--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,12 @@
 
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
         google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:8.13.0'
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.52'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,11 +16,10 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
         google()
+        maven {
+            url "https://artifactory.appodeal.com/appodeal-public/"
+        }
     }
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
