--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.dagger.hilt.android'
 
 def clientPropsFile = rootProject.file("client.properties")
 def clientProperties = new Properties()
@@ -6,14 +7,17 @@ def clientProperties = new Properties()
 clientProperties.load(new FileInputStream(clientPropsFile))
 
 android {
-    compileSdkVersion 27
+    namespace 'com.stevenbrown.notreddit'
+    buildFeatures.buildConfig = true
+
+    compileSdkVersion 34
     defaultConfig {
         applicationId "com.stevenbrown.notreddit"
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
         lintOptions {
             abortOnError false
@@ -45,77 +49,61 @@ android {
         resolutionStrategy.force 'com.android.support:customtabs:27.1.1'
     }
 
-    lintOptions {
-        disable 'CheckResult'
-    }
 }
 
 // https://developer.android.com/topic/libraries/architecture/adding-components.html
 // https://developer.android.com/preview/setup-sdk
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // AndroidX
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
 
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation 'com.android.support:gridlayout-v7:27.1.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel:2.9.4'
+    implementation 'androidx.lifecycle:lifecycle-livedata:2.9.4'
+    implementation 'androidx.lifecycle:lifecycle-runtime:2.9.4'
 
-    //Timber
-    implementation 'com.jakewharton.timber:timber:4.7.0'
+    // Timber
+    implementation 'com.jakewharton.timber:timber:5.0.1'
 
-    //Stetho
-    implementation 'com.facebook.stetho:stetho:1.5.0'
+    // Stetho
+    implementation 'com.facebook.stetho:stetho:1.6.0'
 
-    //OkHttp
-    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    // OkHttp
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.12.0'
 
-    //Glide
-    implementation ('com.github.bumptech.glide:glide:4.6.1') {
-        exclude group: "com.android.support"
-    }
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.6.1'
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
+    implementation 'androidx.browser:browser:1.6.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
 
-    //HTML TextView
-    implementation 'org.sufficientlysecure:html-textview:3.5'
+    // HTML TextView TODO replace
+    implementation 'org.sufficientlysecure:html-textview:4.0'
 
-    //Android CustomTabs (helper library that wraps Chrome CustomTabs)
-    implementation 'saschpe.android:customtabs:1.1.1'
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.11.0'
 
-    // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
-    // https://stackoverflow.com/questions/44922761/warning-warning-supported-source-version-release-7-from-annotation-processor
-    annotationProcessor "android.arch.lifecycle:common-java8:1.1.1"
-
-    //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
-
-    //RxJava2
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.7'
+    // RxJava 3
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
-    //Dagger
-    implementation 'com.google.dagger:dagger:2.14.1'
-    implementation 'com.google.dagger:dagger-android:2.14.1'
-    implementation 'com.google.dagger:dagger-android-support:2.14.1'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.14.1'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.14.1'
+    // Dagger
+    implementation 'com.google.dagger:hilt-android:2.52'
+    annotationProcessor 'com.google.dagger:hilt-compiler:2.52'
 
-    //Google Guava
-    implementation 'com.google.guava:guava:24.0-android'
+    // Google Guava
+    implementation 'com.google.guava:guava:33.2.1-android'
 
-    // Using Java8's time library without requiring API 26
-    // https://github.com/JakeWharton/ThreeTenABP
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
+    // ThreeTenABP (Java 8 time backport)
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.4.6'
 
-    testImplementation 'junit:junit:4.12'
-    testImplementation "android.arch.core:core-testing:1.1.1"
-    testImplementation "org.mockito:mockito-core:2.15.0"
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
+    testImplementation 'org.mockito:mockito-core:5.12.0'
 
 }
