--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,4 @@ org.gradle.jvmargs=-Xmx4096m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-# https://developer.android.com/topic/libraries/data-binding/index.html
-android.databinding.enableV2=true
+android.useAndroidX=true
